<resources>
    <string name="app_name">Comet</string>
    <string name="login_app_name">Meteor</string>
    <string name="login_mail_hint">email address…</string>
    <string name="login_password_hint">password…</string>
    <string name="login">Login</string>
    <string name="go_to_registration">Create new profile</string>
    <string name="login_message">Connect with friends and the world\n around you on Comet Chat.</string>
    <string name="wrong_email_format">"Nem email címet adtál meg.\n Kérlek ellenőrizd a formátumát!\n (valaki@pelda.hu)\n"</string>
    <string name="empty_email_field">"Nem adtál meg email címet!\n"</string>
    <string name="empty_password_field">"Nem adtál meg jelszót!\n"</string>

    <string name="registration_mail_hint">what is your email address?</string>
    <string name="registration_password_hint">password goes here</string>
    <string name="registration_password_again_hint">…and here</string>
    <string name="wrong_password_format">"A jelszavadnak tartalmaznia kell legalább egy nagybetus karaktert és egy számot!\n"</string>
    <string name="wrong_password">Your password must contain at least one uppercase letter, and at least one number.\nThe minimum length is 8 characters/</string>
    <string name="registration">Registration</string>
    <string name="registration_warning">Never share your password with anyone.</string>
    <string name="back_to_login">Login instead</string>
    <string name="password_match_failure">A megadott jelszavak nem egyeznek!</string>
    <string name="password_again_missing">Meg kell erositened a jelszavad!</string>
    <string name="title_activity_user_data_reg">user_data_reg</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="dateOfBirth">your date of birth...</string>
    <string name="Done">Done</string>
    <string name="your_date_of_birth">Your Date Of Birth</string>
    <string name="surname_field">Surname</string>
    <string name="forename_hint">Forename</string>
    <string name="done_registration">Done</string>
    <string name="invalid_year">Invalid year!</string>
    <string name="missing_names">You must fill all fields!</string>
    <string name="wrongNameOrDate">Your name starts with a lowercase character, or your birthday is invalid.</string>
    <string name="title_activity_friends">friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_friends">Friends</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_home">Friends</string>
    <string name="menu_gallery">Groups</string>
    <string name="menu_slideshow">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_komoj">komoj</string>
    <string name="coming_soon">Coming soon</string>

</resources>