<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".RegistrationActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="131dp"
      android:layout_height="128dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintBottom_toTopOf="@+id/registrationEmailField"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.62"
      app:srcCompat="@drawable/logover3" />

  <EditText
      android:id="@+id/registrationEmailField"
      android:layout_width="288dp"
      android:layout_height="51dp"
      android:autofillHints="emailAddress"
      android:background="?android:attr/windowBackground"
      android:ems="10"
      android:hint="@string/registration_mail_hint"
      android:inputType="textEmailAddress"
      android:maxEms="15"
      android:minEms="10"
      android:paddingStart="20dp"
      android:textColor="@color/black"
      android:textColorHint="@color/hint"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.26999998"
      tools:ignore="RtlSymmetry" />

  <EditText
      android:id="@+id/registrationPasswordField"
      android:layout_width="288dp"
      android:layout_height="51dp"
      android:autofillHints="emailAddress"
      android:background="?android:attr/windowBackground"
      android:ems="10"
      android:hint="@string/registration_password_hint"
      android:inputType="textPassword"
      android:maxEms="15"
      android:minEms="10"
      android:paddingStart="20dp"
      android:textColor="@color/black"
      android:textColorHint="@color/hint"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registrationEmailField"
      app:layout_constraintVertical_bias="0.105"
      tools:ignore="RtlSymmetry" />

  <EditText
      android:id="@+id/registrationPasswordAgainField"
      android:layout_width="288dp"
      android:layout_height="51dp"
      android:autofillHints="emailAddress"
      android:background="?android:attr/windowBackground"
      android:ems="10"
      android:hint="@string/registration_password_again_hint"
      android:inputType="textPassword"
      android:maxEms="15"
      android:minEms="10"
      android:paddingStart="20dp"
      android:textColor="@color/black"
      android:textColorHint="@color/hint"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registrationPasswordField"
      app:layout_constraintVertical_bias="0.04000002"
      tools:ignore="RtlSymmetry" />

  <Button
      android:id="@+id/loginButton"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="159dp"
      android:layout_height="66dp"
      android:backgroundTint="@color/button_backgroundTint"
      android:hapticFeedbackEnabled="true"
      android:onClick="register"
      android:shadowColor="@color/black"
      android:shadowDx="3"
      android:shadowDy="4"
      android:shadowRadius="30"
      android:text="@string/registration"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registrationMessage"
      app:layout_constraintVertical_bias="0.14999998" />

  <Button
      android:id="@+id/backToLogin"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/button_backgroundTint"
      android:hapticFeedbackEnabled="true"
      android:minHeight="60dp"
      android:onClick="backToLogin"
      android:shadowColor="@color/black"
      android:shadowDx="3"
      android:shadowDy="4"
      android:shadowRadius="30"
      android:text="@string/back_to_login"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginButton"
      app:layout_constraintVertical_bias="0.13999999" />

  <TextView
      android:id="@+id/registrationMessage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:maxWidth="300dp"
      android:minWidth="200dp"
      android:text="@string/tips_for_registration"
      android:textAlignment="center"
      android:textColor="@color/information"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registrationPasswordAgainField"
      app:layout_constraintVertical_bias="0.01999998" />

  <TextView
      android:id="@+id/registrationWarning"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:maxWidth="300dp"
      android:minWidth="200dp"
      android:text="@string/registration_warning"
      android:textAlignment="center"
      android:textColor="@color/information"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/backToLogin"
      app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>